--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
@@ -683,18 +683,22 @@
                             </tr>
                         </thead>
                         <tbody>
-                            @if (Order != null && Order.OrderItems != null)
+                            @if (Order is not null && Order.OrderItems is not null)
                             {
-                                @foreach (var item in Order.OrderItems)
+                                @foreach (OrderItemDto item in Order.OrderItems)
                                 {
                                     <tr>
                                         <td>
-                                            <InputCheckbox  class="form-check-input" @bind-Value="item.IsSelected" />
+                                            @if (item.ItemType is not ItemType.SetItem)
+                                            {
+                                                <InputCheckbox class="form-check-input" @bind-Value="item.IsSelected" />
+                                            }
                                         </td>
                                         <td class="text-start" style="width: 50%;">
-                                            @if (item.ItemType == ItemType.Item)
+                                            @if (item.ItemType is ItemType.Item)
                                             {
-                                                var firstImage = item.Item?.Images?.FirstOrDefault()?.ImageUrl;
+                                                string? firstImage = item.Item?.Images?.FirstOrDefault()?.ImageUrl;
+
                                                 @if (!string.IsNullOrEmpty(firstImage))
                                                 {
                                                     <img src="@firstImage" class="img-fluid me-2" style="height: 50px; width: auto;" />
@@ -702,30 +706,34 @@
                                                 @item.Item?.ItemName
                                             }
 
-                                            @if (item.ItemType == ItemType.SetItem)
+                                            @if (item.ItemType is ItemType.SetItem)
                                             {
-                                                var firstImage = item.SetItem?.Images?.FirstOrDefault()?.ImageUrl;
-                                                @if (!string.IsNullOrEmpty(firstImage))
-                                                {
-                                                    <img src="@firstImage" class="img-fluid me-2" style="height: 50px; width: auto;" />
-                                                }
-                                                @item.SetItem?.SetItemName
+                                                string? firstImage = item.SetItem?.Images?.FirstOrDefault()?.ImageUrl;
+
+                                                <Div Class="mx-4">
+                                                    @if (!string.IsNullOrEmpty(firstImage))
+                                                    {
+                                                        <img src="@firstImage" class="img-fluid me-2" style="height: 50px; width: auto;" />
+                                                    }
+                                                    @item.SetItem?.SetItemName
+                                                </Div>
                                             }
 
-                                            @if (item.ItemType == ItemType.Freebie)
+                                            @if (item.ItemType is ItemType.Freebie)
                                             {
-                                                var firstImage = item.Freebie?.Images?.FirstOrDefault()?.ImageUrl;
+                                                string? firstImage = item.Freebie?.Images?.FirstOrDefault()?.ImageUrl;
+
                                                 @if (!string.IsNullOrEmpty(firstImage))
                                                 {
                                                     <img src="@firstImage" class="img-fluid me-2" style="height: 50px; width: auto;" />
                                                 }
                                                 @item.Freebie?.ItemName
                                             }
-
                                         </td>
                                         @if (item.IsSelected && IsItemsEditMode)
                                         {
-                                            var thisItem = EditingItems.FirstOrDefault(e => e.Id == item.Id);
+                                            UpdateOrderItemDto? thisItem = EditingItems.FirstOrDefault(e => e.Id == item.Id);
+
                                             @if (thisItem != null)
                                             {
                                                 <td>
@@ -924,16 +932,16 @@
                             </tr>
                         </thead>
                         <tbody>
-                            @if (context.Items != null && context.Items != null)
+                            @if (context.Items is not null && context.Items.Count is not 0)
                             {
-                                @foreach (var item in context.Items)
+                                @foreach (OrderItemDto item in context.Items)
                                 {
                                     <tr>
-                                      
                                         <td class="text-start" style="width: 50%;">
-                                            @if (item.ItemType == ItemType.Item)
+                                            @if (item.ItemType is ItemType.Item)
                                             {
-                                                var firstImage = item.Item?.Images?.FirstOrDefault()?.ImageUrl;
+                                                string? firstImage = item.Item?.Images?.FirstOrDefault()?.ImageUrl;
+                                                
                                                 @if (!string.IsNullOrEmpty(firstImage))
                                                 {
                                                     <img src="@firstImage" class="img-fluid me-2" style="height: 50px; width: auto;" />
@@ -941,63 +949,67 @@
                                                 @item.Item?.ItemName
                                             }
 
-                                                    @if (item.ItemType == ItemType.SetItem)
+                                            @if (item.ItemType is ItemType.SetItem)
+                                            {
+                                                string? firstImage = item.SetItem?.Images?.FirstOrDefault()?.ImageUrl;
+                                                
+                                                <Div Class="mx-4">
+                                                    @if (!string.IsNullOrEmpty(firstImage))
                                                     {
-                                                        var firstImage = item.SetItem?.Images?.FirstOrDefault()?.ImageUrl;
-                                                        @if (!string.IsNullOrEmpty(firstImage))
-                                                        {
-                                                            <img src="@firstImage" class="img-fluid me-2" style="height: 50px; width: auto;" />
-                                                        }
-                                                        @item.SetItem?.SetItemName
+                                                        <img src="@firstImage" class="img-fluid me-2" style="height: 50px; width: auto;" />
                                                     }
+                                                    @item.SetItem?.SetItemName
+                                                </Div>
+                                            }
 
-                                                    @if (item.ItemType == ItemType.Freebie)
-                                                    {
-                                                        var firstImage = item.Freebie?.Images?.FirstOrDefault()?.ImageUrl;
-                                                        @if (!string.IsNullOrEmpty(firstImage))
-                                                        {
-                                                            <img src="@firstImage" class="img-fluid me-2" style="height: 50px; width: auto;" />
-                                                        }
-                                                        @item.Freebie?.ItemName
-                                                    }
+                                            @if (item.ItemType is ItemType.Freebie)
+                                            {
+                                                string? firstImage = item.Freebie?.Images?.FirstOrDefault()?.ImageUrl;
+                                                
+                                                @if (!string.IsNullOrEmpty(firstImage))
+                                                {
+                                                    <img src="@firstImage" class="img-fluid me-2" style="height: 50px; width: auto;" />
+                                                }
+                                                @item.Freebie?.ItemName
+                                            }
 
+                                        </td>
+                                        @if (item.IsSelected && IsItemsEditMode)
+                                        {
+                                            var thisItem = EditingItems.FirstOrDefault(e => e.Id == item.Id);
+                                            @if (thisItem != null)
+                                            {
+                                                <td>
+                                                    <input type="number" min="1" class="form-control form-control-sm @(thisItem.IsQuantiyError ? "invalid" : "")" @bind-value="thisItem.Quantity" @onblur="() => CalculateTotal(thisItem)" />
                                                 </td>
-                                                @if (item.IsSelected && IsItemsEditMode)
-                                                {
-                                                    var thisItem = EditingItems.FirstOrDefault(e => e.Id == item.Id);
-                                                    @if (thisItem != null)
-                                                    {
-                                                        <td>
-                                                            <input type="number" min="1" class="form-control form-control-sm @(thisItem.IsQuantiyError ? "invalid" : "")" @bind-value="thisItem.Quantity" @onblur="() => CalculateTotal(thisItem)" />
-                                                        </td>
-                                                        <td>
-                                                            <input type="number" min="1" class="form-control form-control-sm @(thisItem.IsItemPriceError ? "invalid" : "")" @bind-value="thisItem.ItemPrice" @onblur="() => CalculateTotal(thisItem)" />
-                                                        </td>
-                                                        <td>
-                                                            $@thisItem.TotalAmount.ToString("N2")
-                                                        </td>
-                                                    }
-                                                }
-                                                else
-                                                {
-                                                    <td>
-                                                        @L[item.DeliveryTemperature.ToString()]
-                                                    </td>
-                                                    <td>
-                                                        @item.DeliveryTemperatureCost
-                                                    </td>
-                                                    <td>
-                                                        @item.Quantity
-                                                    </td>
-                                                    <td>
-                                                        <span>$@item.ItemPrice.ToString("N2")</span>
-                                                    </td>
-                                                    <td>
-                                                        $@item.TotalAmount.ToString("N2")
-                                                    </td>
-                                                }
-                                            </tr>
+                                                <td>
+                                                    <input type="number" min="1" class="form-control form-control-sm @(thisItem.IsItemPriceError ? "invalid" : "")" @bind-value="thisItem.ItemPrice" @onblur="() => CalculateTotal(thisItem)" />
+                                                </td>
+                                                <td>
+                                                    $@thisItem.TotalAmount.ToString("N2")
+                                                </td>
+                                            }
                                         }
+                                        else
+                                        {
+                                            <td>
+                                                @L[item.DeliveryTemperature.ToString()]
+                                            </td>
+                                            <td>
+                                                @item.DeliveryTemperatureCost
+                                            </td>
+                                            <td>
+                                                @item.Quantity
+                                            </td>
+                                            <td>
+                                                <span>$@item.ItemPrice.ToString("N2")</span>
+                                            </td>
+                                            <td>
+                                                $@item.TotalAmount.ToString("N2")
+                                            </td>
+                                        }
+                                    </tr>
+                                }
                                         @*     <tr>
                                     <td colspan="2" class="text-end">
                                     @L["Subtotal"]
@@ -1201,13 +1213,16 @@
                             </tr>
                         </thead>
                         <tbody>
-                            @if (Order != null && Order.OrderItems != null)
+                            @if (Order is not null && Order.OrderItems is not null)
                             {
-                                @foreach (var item in Order.OrderItems)
+                                @foreach (OrderItemDto item in Order.OrderItems)
                                 {
                                     <tr>
                                         <td>
-                                            <InputCheckbox  class="form-check-input" @bind-Value="item.IsSelected" />
+                                            @if (item.ItemType is not ItemType.SetItem) 
+                                            {
+                                                <InputCheckbox class="form-check-input" @bind-Value="item.IsSelected" />
+                                            }
                                         </td>
                                         <td class="text-start" style="width: 50%;">
                                             @if (item.ItemType == ItemType.Item)
@@ -1223,11 +1238,14 @@
                                             @if (item.ItemType == ItemType.SetItem)
                                             {
                                                 var firstImage = item.SetItem?.Images?.FirstOrDefault()?.ImageUrl;
-                                                @if (!string.IsNullOrEmpty(firstImage))
-                                                {
-                                                    <img src="@firstImage" class="img-fluid me-2" style="height: 50px; width: auto;" />
-                                                }
-                                                @item.SetItem?.SetItemName
+
+                                                <Div Class="mx-4">
+                                                    @if (!string.IsNullOrEmpty(firstImage))
+                                                    {
+                                                        <img src="@firstImage" class="img-fluid me-2" style="height: 50px; width: auto;" />
+                                                    }
+                                                    @item.SetItem?.SetItemName
+                                                </Div>
                                             }
 
                                             @if (item.ItemType == ItemType.Freebie)
