--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -606,7 +606,7 @@
         </div>
         <Div Class="row">
             <Div Class="col-2"></Div>
-            <Div Class="col-2">Product Type <span class="text-danger"> *</span></Div>
+            <Div Class="col-2">@L[PikachuResource.ProductType] <span class="text-danger"> *</span></Div>
             <Div Class="col-8">
                 <select class="form-select"
                         @onchange=OnProductTypeChange>
