--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -592,7 +592,7 @@
 
         <Div Class="row">
             <Div Class="col-2"></Div>
-            <Div Class="col-2">Product Type <span class="text-danger"> *</span></Div>
+            <Div Class="col-2">@L[PikachuResource.ProductType] <span class="text-danger"> *</span></Div>
             <Div Class="col-8">
                 <select class="form-select"
                         @onchange=OnProductTypeChange>
