--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -179,6 +179,7 @@
                     </span>
                 </div>
             </div>
+            <br />
            @*  <div class="row">
                 <div class="col-2">
                     <fieldLabel>@L["ItemTags"]</fieldLabel>
@@ -199,7 +200,7 @@
                     </div>
                 </div>
             </div> *@
-            <div class="row">
+            <div class="row my-3">
                 <div class="col-2">
                     <label>@L["ItemStyle"]</label>
                 </div>
