--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
@@ -244,7 +244,7 @@
           Justified="true">
         <Items>
             <Tab Name="All" TextSize="TextSize.Small">All</Tab>
-            @foreach (string value in Enum.GetNames(typeof(ShippingStatus)).Where(w => w != PikachuResource.Exchange))
+            @foreach (string value in Enum.GetNames(typeof(ShippingStatus)).Where(w => w is not PikachuResource.Exchange))
             {
                 <Tab Name="@value" TextSize="TextSize.Small">@L[value]</Tab>
             }
