--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -379,26 +379,36 @@
             <div class="col-8">
             @if(CreateGroupBuyDto.AllowShipToOuterTaiwan && !CreateGroupBuyDto.AllowShipOversea)
             {
-             @foreach(var item in Enum.GetNames(typeof(DeliveryMethod)))
-              {
-                        if (item == Enum.GetName(DeliveryMethod.SevenToElevenC2C) || item == Enum.GetName(DeliveryMethod.SevenToEleven1) || item == Enum.GetName(DeliveryMethod.BlackCat1) || item == Enum.GetName(DeliveryMethod.BlackCatFreeze) || item == Enum.GetName(DeliveryMethod.BlackCatFrozen))
-                  {
-               <label for="@item" class="form-label">
-                                <input type="checkbox" class="form-check-input me-1" id="@item" disabled="@((CreateGroupBuyDto.ExcludeShippingMethod != null) && (CreateGroupBuyDto.ExcludeShippingMethod.Contains("DeliveredByStore"))&&item!="DeliveredByStore")" checked="@((CreateGroupBuyDto.ExcludeShippingMethod != null) && (CreateGroupBuyDto.ExcludeShippingMethod.Contains(item)))" @onchange="(value) => OnShippingMethodCheckedChange(item, value)" />
-                                @L[item]
-                            </label>
-              }
-              }
+                @foreach(var item in Enum.GetNames(typeof(DeliveryMethod)))
+                {
+                    if (item == Enum.GetName(DeliveryMethod.SevenToElevenC2C) || 
+                        item == Enum.GetName(DeliveryMethod.SevenToEleven1) || 
+                        item == Enum.GetName(DeliveryMethod.BlackCat1) || 
+                        item == Enum.GetName(DeliveryMethod.BlackCatFreeze) || 
+                        item == Enum.GetName(DeliveryMethod.BlackCatFrozen))
+                    {
+                        <label for="@item" class="form-label">
+                            <input type="checkbox" 
+                                   class="form-check-input me-1" 
+                                   id="@item" 
+                                   disabled="@((CreateGroupBuyDto.ExcludeShippingMethod != null) && (CreateGroupBuyDto.ExcludeShippingMethod.Contains("DeliveredByStore")) && item != "DeliveredByStore")" 
+                                   checked="@((CreateGroupBuyDto.ExcludeShippingMethod != null) && (CreateGroupBuyDto.ExcludeShippingMethod.Contains(item)))" 
+                                   @onchange="(value) => OnShippingMethodCheckedChange(item, value)" />
+                            @L[item]
+                        </label>
+                    }
+                }
             }
-            else{
-              @foreach(var item in Enum.GetNames(typeof(DeliveryMethod)))
-              {
-               <label for="@item" class="form-label ">
-                                <input type="checkbox" class="form-check-input me-1" id="@item" disabled="@((CreateGroupBuyDto.ExcludeShippingMethod != null) && (CreateGroupBuyDto.ExcludeShippingMethod.Contains("DeliveredByStore"))&&item!="DeliveredByStore")" checked="@((CreateGroupBuyDto.ExcludeShippingMethod != null) && (CreateGroupBuyDto.ExcludeShippingMethod.Contains(item)))" @onchange="(value) => OnShippingMethodCheckedChange(item, value)" />
-                                @L[item]
-                            </label>
-              }
-           }
+            else
+            {
+                @foreach(var item in Enum.GetNames(typeof(DeliveryMethod)))
+                {
+                    <label for="@item" class="form-label ">
+                        <input type="checkbox" class="form-check-input me-1" id="@item" disabled="@((CreateGroupBuyDto.ExcludeShippingMethod != null) && (CreateGroupBuyDto.ExcludeShippingMethod.Contains("DeliveredByStore"))&&item!="DeliveredByStore")" checked="@((CreateGroupBuyDto.ExcludeShippingMethod != null) && (CreateGroupBuyDto.ExcludeShippingMethod.Contains(item)))" @onchange="(value) => OnShippingMethodCheckedChange(item, value)" />
+                        @L[item]
+                    </label>
+                }
+            }
 
             </div>
 
