--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -385,7 +385,7 @@
                             <Switch TValue="bool" @bind-Checked="CreateItemDto.IsReturnable"></Switch>
                         </div>
                     </div> *@
-                    <div class="row">
+                    @* <div class="row">
                         <div class="col-3">
                             <label>@L["ShippingMethod"]</label>
                         </div>
@@ -397,7 +397,7 @@
                                         ValueField="@((item)=>item.Id)"
                             @bind-SelectedValue="@CreateItemDto.ShippingMethodId" />
                         </div>
-                    </div>
+                    </div> *@
                     <div class="row">
                         <div class="col-3">
                             <label>@L["TaxType"]</label>
